[project]
name = "scraping"
version = "0.1.0"
description = ""
authors = [
    {name = "Teodora Grumezescu",email = "grumezescu@ruc.dk"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "urllib3 (>= 1.24.0)",
    "python-ndev-blizzardapi == 0.2.3",
    "requests-oauthlib",
    "json-stream-parser"
]

[tool.poetry]
packages = [{include = "scraping", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
